# myWellnezz

./: .gitignore  LICENSE  README.md  build.py  conf_example.json  constants.py  main.py  main_loop.py  myWellnezz-1.1.0-patched.spec  myWellnezz-1.1.0.spec  pyinstaller.py  pyproject.toml  requirements.txt  util.py
.github/workflows/: python-package.yml
models/: booking.py  config.py  event.py  facility.py  lesson.py  mywellnezz.py  user.py  usercontext.py
modules/: ascii_art.py  console_util.py  http_calls.py  math_util.py  process_util.py  update.py  useragent.py  version.py
my_wellnezz/: __main__.py  main_loop.py
my_wellnezz/models/: config.py  event.py  facility.py  mywellnezz.py  usercontext.py
my_wellnezz/modules/: ascii_art.py  console_util.py  update.py  useragent.py
mywellnezz/: main.py
mywellnezz/app/: constants.py  main_loop.py
mywellnezz/models/: config.py  event.py  facility.py  mywellnezz.py  usercontext.py
mywellnezz/modules/: ascii_art.py  console_util.py  http_calls.py  process_util.py  version.py
