[tool.poetry]
name = "mywellnezz"
version = "0.1.0"
description = ""
authors = ["AeonDave"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.10.0"
colorama = "^0.4.6"
wakepy = "^0.7.2"
psutil = "^5.9.8"
aiohttp = "^3.9.5"
aioconsole = "^0.7.0"
pillow = "^10.3.0"
pwinput = "^1.0.3"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
