[tool.poetry]
name = "mywellnezz"
version = "1.2.0"
description = ""
authors = ["AeonDave"]
readme = "README.md"
packages = [
    { include = "mywellnezz" },
    { include = "app", from = "mywellnezz" },
    { include = "models", from = "mywellnezz" },
    { include = "modules", from = "mywellnezz" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
prettytable = "^3.10.0"
colorama = "^0.4.6"
psutil = "^5.9.8"
aiohttp = "^3.9.5"
aioconsole = "^0.7.0"
pillow = "^10.3.0"
pwinput = "^1.0.3"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7.2"
pyinstaller = "^6.6.0"
mouse = "^0.7.1"

[tool.poetry.scripts]
mywellnezz = "mywellnezz.main:start"
build = "pyinstaller:install"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
